fix height bug on safari

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -11,7 +11,8 @@
   }
   img {
     padding: 2rem;
-    width: 196px;
+    width: 192px;
+    height: 192px;
     flex-shrink: 0;
   }
   .column {
